--- a/webSite/scanner/templates/scanner/index.html
+++ b/webSite/scanner/templates/scanner/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>QR Scanner</title>
+    <title>QRWay</title>
 </head>
 <body>
-    <h1>QR Scanner</h1>
+    <h1>QRWay</h1>
     <a href="{% url 'add_qr_code' %}">Добавить QR-код</a><br>
     <a href="{% url 'show_all_data' %}">Показать все QR-коды</a>
 </body>
