--- a/webSite/scanner/templates/scanner/index.html
+++ b/webSite/scanner/templates/scanner/index.html
@@ -16,6 +16,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <meta charset="UTF-8">
     <title>QRWay</title>
     <style>
@@ -36,25 +37,28 @@
             z-index: 1; /* Устанавливаем уровень наложения выше фона */
         }
         h1 {
-            margin-bottom: 20px; /* Отступ между заголовком и кнопками */
-            font-size: 48px; /* Увеличиваем размер шрифта заголовка */
+            font-family: 'Muli';
+            margin-bottom: 200px; /* Отступ между заголовком и кнопками */
+            font-size: 72px; /* Увеличиваем размер шрифта заголовка */
             text-align: center; /* Центрируем текст заголовка */
         }
         .button {
+            font-family: 'Muli';
             background-color: transparent; /* Прозрачный фон */
-            color: rgb(0, 0, 0); /* Цвет текста кнопки */
+            color: rgb(244, 244, 244); /* Цвет текста кнопки */
             border: 2px solid rgb(0, 0, 0); /* Рамка кнопки */
             border-radius: 5px; /* Закругленные углы */
             padding: 10px 20px; /* Увеличиваем отступы внутри кнопки */
-            margin: 5px 0; /* Отступы между кнопками */
+            margin: 5px; /* Отступы между кнопками */
             text-decoration: none; /* Убираем подчеркивание */
             cursor: pointer; /* Указатель при наведении */
             transition: background-color 0.3s, color 0.3s; /* Плавный переход для фона и цвета */
         }
         .button:hover {
             background-color: rgb(27, 155, 219); /* Фон при наведении */
-            color: black; /* Цвет текста при наведении */
+            color: rgb(91, 74, 137); /* Цвет текста при наведении */
         }
+
     </style>
 </head>
 <body>
