--- a/webSite/scanner/templates/scanner/addqrcode.html
+++ b/webSite/scanner/templates/scanner/addqrcode.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добавить QR Код</title>
     <style>
         body {
-            background-image: url('https://images.wallpaperscraft.ru/image/single/poverhnost_temnyj_fon_50614_1920x1200.jpg');
+            background-image: url("https://www.itl.cat/pngfile/big/157-1572191_hd-wallpapers-for-website-background-cool-background-image.jpg");
             display: flex; /* Используем flexbox для центрирования */
             flex-direction: column; /* Вертикальное выравнивание */
             justify-content: center; /* Центрирование по вертикали */
@@ -18,6 +19,9 @@
         }
 
         h1 {
+            font-family: "Muli";
+            color: rgb(244, 244, 244); 
+            font-size: 52px;
             margin-bottom: 20px; /* Отступ между заголовком и следующим элементом */
         }
 
@@ -45,7 +49,7 @@
 
 <body>
     <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
-    <h1>Сканировать QR Код</h1>
+    <h1>Scan QR-code</h1>
     <div id="reader"></div>
 
     <input type="hidden" id="qr_data" name="qr_data" value="">
